Added bash script for linux/mac users